<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_win"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/you_win" />

        <TextView
            android:id="@+id/score_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/scoreblurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/win_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ok" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/win_screen_sign_in_bar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:background="#f0f0f0"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/win_screen_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in_to_upload_this_score"
            android:textColor="#808080" />
    </LinearLayout>

    <TextView
        android:id="@+id/win_screen_signed_in_bar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:background="#f0f0f0"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:padding="10dp"
        android:text="@string/you_are_signed_in"
        android:textColor="#808080"
        android:visibility="gone" />

</LinearLayout>